--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,10 @@ body {
         font-size: 17px;
         color: rgb(157, 157, 157);
 }
+#notice{
+    font-size: 15px;
+        color: rgb(157, 157, 157);
+}
 #title{
     height: 30px;
     width: 50%;
@@ -70,14 +74,6 @@ transition: 0.2s ease-in-out;
     animation: blink-animation 1s steps(5, start) infinite;
     font-size: 70%;
   }
-/* Style the container box 
-
-
-
-
-
-
-*/
 
 
 .sidebar {
@@ -150,7 +146,7 @@ transition: 0.2s ease-in-out;
     }
 
     .sidebar {
-        width: 200px; /* Reduce sidebar width */
+        width: 230px; /* Reduce sidebar width */
     }
 
     .content {
